--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="Bootsrap/css/bootstrap.css">
+    <link rel="stylesheet" href="styles.css" type="text/css">
    
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries  -->
@@ -45,7 +46,33 @@
             </form>
         </div>
         </div>
-        </nav>
+    </nav>
+
+    </div>
+    <div class="container border mt-5 bg-info">
+        <h1>login</h1>
+        <p class="lead">Use this form to login in to your account</p>
+
+        <form action="log-in" method="post">
+
+        <div class="form-group mb-3">
+            <label for="login-username" class="sr-only">Username:</label>
+            <input type="text" class="form-control" id="login-username" placeholder="username" name="username">
+        </div>
+        <div class="form-group mb-3">
+            <label for="login-password" class="sr-only">Password:</label>
+            <input type="text" class="form-control" id="login-password" placeholder="password" name="password">
+        </div>
+        <div class="checkbox mb-3">
+            <label><input type="checkbox">Remember me</label>
+        </div>
+        <button class="btn btn-primary" type="submit" name="login">log in</button>
+        <br>
+        <hr>
+        <p class="text-center">if you dont have an account <a href="signUp.html">SignUp</a></p>
+    </form>
+    </div>
+
     
        
     <!-- JQuery (neccessary for bootstrap's Javascripts plugins) -->
